--- a/src/app/components/bar/bar.component.html
+++ b/src/app/components/bar/bar.component.html
@@ -3,10 +3,14 @@
         <img src="/assets/argentina-programa.png" alt="image" class="aspect-square w-12">
         <span class="font-semibold text-base">Argentina Programa</span>
     </div>
-    <ng-container *ngIf="isLoggedIn ;then logoutButton;else loginButton"></ng-container>
+    <div class="flex gap-2">
+        <button routerLink="/edit" *ngIf="isLoggedIn"
+            class="font-semibold px-3 py-1 rounded-md border-green-500 border-2 text-green-500 hover:bg-green-500 hover:text-white transition-colors">Editar</button>
+        <ng-container *ngIf="isLoggedIn ;then logoutButton;else loginButton"></ng-container>
+    </div>
 </div>
 
-<app-modal-form *ngIf="showForm" [questions]="questions" [onModalClick]="closeForm" [onSubmit]="login"
+<app-modal-form [title]="'Login'" *ngIf="showForm" [questions]="questions" [onModalClick]="closeForm" [onSubmit]="login"
     [disabler]="disabler.asObservable()">
 </app-modal-form>
 <ng-template #logoutButton>
@@ -16,4 +20,7 @@
 <ng-template #loginButton>
     <button (click)="openForm()"
         class="font-semibold px-3 py-1 rounded-md border-green-500 border-2 text-green-500 hover:bg-green-500 hover:text-white transition-colors">Login</button>
+</ng-template>
+<ng-template #editLink>
+
 </ng-template>
