--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()" class="px-5 py-3 bg-white rounded-2xl">
+<form [formGroup]="form" (ngSubmit)="submit()" class="px-5 py-3 bg-white rounded-2xl min-w-[300px]">
     <p *ngIf="title" class="text-lg font-medium">{{title}}</p>
     <app-dynamic-form-question *ngFor="let question of questions" [form]="form"
         [question]="question"></app-dynamic-form-question>
