--- a/src/app/components/file-input/file-input.component.html
+++ b/src/app/components/file-input/file-input.component.html
@@ -1,1 +1,5 @@
-<input type="file" (change)="setFile($event)" [disabled]="disabled">
+<label for="file-input" class="flex items-center gap-2">
+    <mat-icon class="text-black">attachment</mat-icon>
+    <span>{{file ? file.name : "Elegir imagen"}}</span>
+</label>
+<input id="file-input" class="hidden" type="file" (change)="setFile($event)" [disabled]="disabled">
