--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,11 +1,23 @@
-<div>
-    <div><mat-icon (click)="openForm()">edit</mat-icon> <mat-icon (click)="delete()">delete</mat-icon></div>
-    <p>{{project.name}}</p>
-    <p>{{project.description}}</p>
-    <p>{{project.realizationDate}}</p>
-    <p *ngIf="project.link">{{project.link}}</p>
-    <img *ngIf="project.portrait" [src]="project.portrait.url" style="width: 50px;height: 50px;">
+<div class="flex my-14 gap-3" [ngClass]="{'pointer-events-none opacity-30': isBeingDeleted}">
+    <div class="w-full grid grid-cols-2">
+        <div class="grid place-content-center">
+            <img *ngIf="project.portrait" [src]="project.portrait.url" class="aspect-square object-cover w-52">
+        </div>
+        <div class="flex flex-col">
+            <p class="font-semibold text-base text-center">{{project.name | titlecase}}</p>
+            <p class="text-right text-gray-400">{{project.realizationDate}}</p>
+            <p>{{project.description}}</p>
+            <a [href]="project.link" target="_blank" referrerpolicy="noreferrer" *ngIf="project.link"
+                class="text-blue-600 mt-auto">Visitar la pagina</a>
+        </div>
+    </div>
+
+    <div *ngIf="isEditable" class="flex flex-col justify-evenly">
+        <app-edit-button (click)="openForm()"></app-edit-button>
+        <app-delete-button (click)="delete()"></app-delete-button>
+    </div>
 
 </div>
 
-<app-modal-form *ngIf="showForm" [questions]="questions" [onSubmit]="edit" [onModalClick]="closeForm"></app-modal-form>
+<app-modal-form *ngIf="showForm" [questions]="questions" [onSubmit]="edit" [onModalClick]="closeForm"
+    [baseObject]="projectForm"></app-modal-form>
